--- a/html-lesson.html
+++ b/html-lesson.html
@@ -23,13 +23,15 @@
      	<p>
      		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      	</p>
-     </blockquote>
 
      <!-- Another Comment --> 
 
      <p> 
      	Lorem ipsum dolor sit amet, consectetur adipiscing elit, <i>New York Times</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <strong> exercitation </strong> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a target="blank_" title="Link to Google" href="https://google.com">Google</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
+
+     <p>
+     	<img src="images/sunset.jpg" title="Sunset" alt="Sunset" />
 
      <p> The Catcher in the Rye<br>
      	Ulysses<br>
