--- a/html-lesson.html
+++ b/html-lesson.html
@@ -15,10 +15,7 @@
      <h4>This is a smaller header<h4>
 
      	<!--- This is a comment --> 
-
-     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <i>New York Times</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <strong> exercitation </strong> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     <p>
+     	
      </blockquote>
      	<p>
      		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -31,7 +28,7 @@
      </p>
 
      <p>
-     	<img src="images/sunset.jpg" title="Sunset" alt="Sunset" />
+     	<a href="https://unsplash.com/photos/FeYlAOm-64Y" img src="images/sunset.jpg" title="Sunset" alt="Sunset" />
 
      <p> The Catcher in the Rye<br>
      	Ulysses<br>
