--- a/html-lesson.html
+++ b/html-lesson.html
@@ -23,7 +23,7 @@
 	     </p>
 
 	     <p>
-	       <a href="https://unsplash.com/photos/FeYlAOm-64Y" img src="images/sunset.jpg" title="Sunset" alt="Sunset" />Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	       <a href="https://unsplash.com/photos/FeYlAOm-64Y" img src="images/sunset.jpg" title="Sunset" alt="Sunset" />
 	     </p>
 
 	     <blockquote>
@@ -40,7 +40,7 @@
 
 	     <p> The Catcher in the Rye<br>
 	     	Ulysses<br>
-	     	The Plague
+	     	The Plague<br>
 	     </p>
 
 	     <ul>
@@ -56,7 +56,7 @@
 	     	<li>Connecticut</li>
 	     </ol>
     <div>
-    	
+
     </body>
     
 
