--- a/html-lesson.html
+++ b/html-lesson.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 
 <html>
+
   <head>
-  	<title>Hello World</title>
-  	<meta name="keywords" content="lesson, HTML, Binghamton University">
+  	<title>HTML Lesson</title>
+  	<meta name="keywords"content="lesson, HTML, Binghamton University">
   	<meta name="description" content="This is a basic intro to HTML coding.">
-  	<link rel="stylesheet" type="text/css" href="css/style.css" />
+  	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+
+  <body>
+
+  	<h1>Intro to HTML Lesson</h1>
+  	<h2>My Very nice subtitle</h2>
+  	<h3>Another Headline Right Here</h3>
+  	<h4>This is a even smaller header</h4>
+
+  	<!-- This is a comment -->
+
+  	<div>
+	  	<p>
+	  	  Lorem ipsum dolor sit amet, consectetur adipiscing elit, <i> New York Times</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <strong>exercitation ullamco</strong> laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	  	</p>
+
+	  	<p>
+	  	 <a href="https://unsplash.com/photos/FeYlAOm-64Y"><img src="https://images.unsplash.com/photo-1513051265668-0ebab31671ae?ixlib=rb-1.2.1&auto=format&fit=crop&w=2734&q=80/" title="Sunset" alt="A sunset" width="500" /></a>
+	  	</p>
+
+	  	<p>
+	  	  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a target="_blank" title="Link to Google" href="https://google.com">Google</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	  	</p>
+
+	  	<blockquote>
+	  		<p>
+	  		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	  		</p>
+	  	</blockquote>
+
+	  	<!-- Another Comment -->
+
+	  	<p>
+	  	  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a target="_blank" title="Link to Google" href="https://google.com">Google</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	  	</p>
+
+	  	<p>The Catcher in the Rye<br>
+	  	   Ulysses<br>
+	  	   The Plague
+	  	</p>
+
+	  	<ul>
+	  	  <li>Apples</li>
+	  	  <li>Oranges</li>
+	  	  <li>Durian</li>
+	  	  <li>Bananas</li>		
+	  	</ul>
+
+	  	<ol>
+	  	  <li>New York</li>
+	  	  <li>New Jersey</li>
+	  	  <li>Connecticut</li>
+	  	</ol>
+  </div>
 
   </body>
 
-     <h1>Intro to HTML Lesson</h1>
-     <h2>My Very nice subtitle</h2>
-     <h3>Another Headline Right Here</h3>
-     <h4>This is a smaller header<h4>
-
-     	<!--- This is a comment --> 
-
-     <div>
-	     <p>
-	        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <i>New York Times</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <strong> exercitation </strong> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	     </p>
-
-	     <p>
-	       <a href="https://unsplash.com/photos/FeYlAOm-64Y" img src="images/sunset.jpg" title="Sunset" alt="Sunset" />
-	     </p>
-
-	     <blockquote>
-	     	<p>
-	     	  Excepteur sint occaecat cupidatat non prodient, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	     	</p>
-	     </blockquote>
-
-	     <!-- Another Comment -->
-
-	     <p> 
-	     	Lorem ipsum dolor sit amet, consectetur adipiscing elit, <i>New York Times</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <strong> exercitation </strong> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a target="blank_" title="Link to Google" href="https://google.com">Google</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	     </p>
-
-	     <p> The Catcher in the Rye<br>
-	     	Ulysses<br>
-	     	The Plague<br>
-	     </p>
-
-	     <ul>
-	     	<li>Apples</li>
-	     	<li>Oranges</li>
-	     	<li>Pears</li>
-	     	<li>Blueberries</li>
-	     </ul>
-
-	     <ol>
-	     	<li>New York</li>
-	     	<li>New Jersey</li>
-	     	<li>Connecticut</li>
-	     </ol>
-    <div>
-
-    </body>
-    
 
 </html>
