--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  	<title>Hello World</title>
-  </head>
+<head>
+ <meta name="keywords" content="design, writer, designer">
+ <meta name="description" content="Personal Website of Lily Tang">
+ <title>Lily Tang</title>
+ <script src="https:cdnjs.cloudfare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
+<link rel="stylesheet" type="text/css" href="css/grid.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Lora&display=swap" rel="stylesheet">
 
-  </body>
+</head>
 
-     <h1>Hello World</h1>
+<body>
 
-     <p>something else, something more.</p>
+<div id="wrapper">
 
-    </body>
+ <div id="masthead" class="grid">
+</div>
 
+ 	<div id="nav-button" class="width-3-12-m width-12-12">
+	 <div id="nav-button-holder">
+	  <button class="hamburger hamburger--squeeze" type="button">
+	  <span class="hamburger-box">
+	  <span class="hamburger-inner"></span>
+	 </span>
+	</button>
+</div>
+</div>
+
+<div id="nav" class="width-12-12-m width 7-12">
+	<ul>
+	 <li><a href="#">Home</a></li>
+	 <li><a href="#">Portfolio</a></li>
+	 <li><a href="#">Blog</a></li>
+	 <li><a href="#">Contact</a></li>
+	</ul>
+</div>
+</div>
+
+
+<div id="main" class="grid">
+</div>
+
+<div id="footer" class="grid">
+</div>
+
+ </div>
+
+</body>
 </html>
