--- a/lessons/portfolio.html
+++ b/lessons/portfolio.html
@@ -47,20 +47,14 @@
 
 		<div id="main" class="grid">
 
-		<div id="intro" class="width-12-12-m width-12-12">
-			<div id="intro-holder">
-				<h1>We are the music makers. We are the dreamers of the dream.</h1>
-			</div>
-		</div>
+			<div id="portfolio" class="width-12-12m width-12-12">
 
-		<div id="work" class="width-12-12m width-12-12">
+			<h3><a href="portfolio.html">Portfolio</a></h3>
 
-			<h3><a title="Portfolio" href="portfolio.html">Portfolio</a></h3>
+		<div id="portfolio-holder" class="grid">
 
-		<div id="work-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Aloe vera">
+          <div class="width-12-12-m width-12-12 work-item">
+            <a class="inner" href="portfolio-single.html" title="Portfolio">
               <div class="work-inside">
                 <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
                 <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
@@ -70,52 +64,14 @@
           </div>
 
           <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Aloe vera">
+            <a class="inner" href="portfolio-single.html" title="Portfolio">
               <div class="work-inside">
-                <h2>The Orchidaceae are a diverse and widespread family of flowering.</h2>
-                <p>The origins of orchids goes back much longer than originally expected.</p>
+                <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
+                <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
               </div>
-              <img title="Orchidaceae" src="images/orchid.jpg" />
+              <img title="Aloe vera" src="images/aloe-vera.jpg" />
             </a>
           </div>
-
-        <div>
-
-      </div>
-
-      <div id="writings" class="width-12-12-m width-12-12">
-
-        <h3><a title="Blog" href="blog.html">Writing</a></h3>
-
-        <div id="writings-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
-
-        <div>
-
-      </div>
 
     </div>
 
