--- a/lessons/portfolio.html
+++ b/lessons/portfolio.html
@@ -37,7 +37,7 @@
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
@@ -63,7 +63,7 @@
             </a>
           </div>
 
-          <div class="width-12-12-m width-6-12 work-item">
+          <div class="width-12-12-m width-12-12 work-item">
             <a class="inner" href="portfolio-single.html" title="Portfolio">
               <div class="work-inside">
                 <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
@@ -73,8 +73,11 @@
             </a>
           </div>
 
-    </div>
+    	</div>
 
+	</div>
+
+</div>
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
@@ -82,5 +85,7 @@
 		</div>
 
 	</div>
+
+</div>
 </body>
-</head>
+</html>
