--- a/lessons/blog-single.html
+++ b/lessons/blog-single.html
@@ -47,31 +47,34 @@
 
 		<div id="main" class="grid">
 
-		<div id="portfolio" class="width-12-12-m width-12-12">
+		<div id="writings" class="width-12-12-m width-12-12">
 
-			<h3><a href="portfolio.html">Portfolio</a></h3>
+			<h3><a title="Blog" href="blog.html">Writing</a></h3>
 
-			<div id="portfolio-holder" class="grid">
+			<div id="writings-holder" class="grid">
 
 			<div class="width-12-12-m width-12-12 work-item">
-              <a class="inner" href="portfolio-single.html" title="Aloe vera">
-					 <div class="work-inside">
-					  <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
-					</div>
+			<div class="date-holder"><p class="date">18 APR, 2020</p></div>
+			<h2><a href="Aloe vera"></a></h2>
+				<p>An ever green perennial, it originates from the Arabian Peninsula.</p>
+
+			<p>
 				<img title="Aloe vera" src="images/aloe-vera.jpg" />
-			  </a>
-			</div>
+				<span class="caption">Nice image caption here.</span>
+			</p>
 
-			<div class="width-12-12-m width-9-12">
-				<h4>A Sub Header</h4>
-				<p>Praesent posuere non dui ac interdum. Maecenas ac vulputate massa. Etiam a esta ligula. Nam congue posuere enim et convallis. In lacinia dui urna, at posuere quam sollicitudin vel.</p>
-				<p>Quisque eu justo in mauris rutrum mollis. Maecenas sit amet scelerisque est, nec eleifend nisl. Vivamus pulvinar egestas elit vel bibendum. Donec iaculis purus est, quis efficitur arcu facilisis quis.</p>
-				<p>Duis malesuada libero nec nisi pharetra, vel iaculis neque elementum. Donec porttitor sem quis eros ornare, vel sodales mauris consequat.</p>
-				<p><a title="View Project" target="_blank" href="">View Project</a></p>
-			</div>
+			<p>Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
 
-    </div>
+           	<p>In rutrum, nisi sed eleifend venenatis, tellus est volutpat nulla, sed posuere quam velit non odio. Proin vel quam pulvinar nunc faucibus pulvinar sit amet sed lorem. Nullam maximus, ante non euismod iaculis, leo neque ultricies ligula, tristique sodales purus libero nec dolor. Donec volutpat metus vitae finibus laoreet. Donec ut eros non nisi efficitur gravida non at eros. Aliquam in neque aliquam, consequat sapien ac, luctus nisl. Curabitur lacinia ligula id aliquet ullamcorper. Aenean mattis ut massa sed auctor. Phasellus sit amet lectus maximus, malesuada est a, vestibulum libero. Proin dui sapien, congue vel varius eu, rhoncus in ligula.</p>
+
+           	<p>Sed eleifend quam non nisi elementum varius. Curabitur posuere sit amet ex vitae vehicula. Cras eleifend quam tempus fringilla finibus. Duis suscipit semper justo, quis scelerisque massa vestibulum quis. In imperdiet ornare nunc. Vestibulum at ligula eu sapien laoreet varius. Sed dapibus, purus maximus congue porttitor, arcu dolor tincidunt purus, eu vulputate leo lorem quis libero. Nunc tempor pellentesque auctor. Praesent pretium lorem ac ipsum elementum venenatis. Fusce vitae arcu pharetra, dignissim tortor quis, ornare lectus. Phasellus sed condimentum nunc. Suspendisse dapibus, orci vel sagittis ornare, risus elit gravida nunc, nec posuere dolor nulla accumsan est. </p>
+          </div>
+
+    	</div>
+
+	</div>
+
+</div>
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
