--- a/lessons/contact.html
+++ b/lessons/contact.html
@@ -39,7 +39,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
        </ul> 
       </div>
 
@@ -47,31 +47,23 @@
 
 		<div id="main" class="grid">
 
-		<div id="portfolio" class="width-12-12-m width-12-12">
+		<div id="writings" class="width-12-12-m width-12-12">
 
-			<h3><a href="portfolio.html">Portfolio</a></h3>
-
-			<div id="portfolio-holder" class="grid">
+			<div id="writings-holder" class="grid">
 
 			<div class="width-12-12-m width-12-12 work-item">
-              <a class="inner" href="portfolio-single.html" title="Aloe vera">
-					 <div class="work-inside">
-					  <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
-					</div>
-				<img title="Aloe vera" src="images/aloe-vera.jpg" />
-			  </a>
-			</div>
+			<h2><a href="Contact"></a></h2>
+				<p>An ever green perennial, it originates from the Arabian Peninsula.</p>
 
-			<div class="width-12-12-m width-9-12">
-				<h4>A Sub Header</h4>
-				<p>Praesent posuere non dui ac interdum. Maecenas ac vulputate massa. Etiam a esta ligula. Nam congue posuere enim et convallis. In lacinia dui urna, at posuere quam sollicitudin vel.</p>
-				<p>Quisque eu justo in mauris rutrum mollis. Maecenas sit amet scelerisque est, nec eleifend nisl. Vivamus pulvinar egestas elit vel bibendum. Donec iaculis purus est, quis efficitur arcu facilisis quis.</p>
-				<p>Duis malesuada libero nec nisi pharetra, vel iaculis neque elementum. Donec porttitor sem quis eros ornare, vel sodales mauris consequat.</p>
-				<p><a title="View Project" target="_blank" href="">View Project</a></p>
-			</div>
+			<p>Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
+			
+          </div>
 
-    </div>
+    	</div>
+
+	</div>
+
+</div>
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
