forgot a carrot - icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
-	<link rel="icon" type="image/png" href="images/icon.png"
+	<link rel="icon" type="image/png" href="images/icon.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
   	<script src="js/main.js"></script>
  	<link rel="stylesheet" type="text/css" href="css/grid.css">
