--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   	<script src="js/main.js"></script>
  	<link rel="stylesheet" type="text/css" href="css/grid.css">
   	<link rel="stylesheet" type="text/css" href="css/style.css">
-  	<link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -46,13 +48,13 @@
 
     </div>
 
-		<div id="main" class="grid">
 
-		<div id="intro" class="width-12-12-m width-12-12">
-			<div id="intro-holder">
-				<h1>We are the music makers. We are the dreamers of the dream.</h1>
-			</div>
-		</div>
+
+		<div id="main">
+      <div id="intro">
+        <h1>We are the music makers. We are the dreamers of the dream.</h1>
+    </div>
+		
 
 		<div id="work" class="width-12-12m width-12-12">
 
