--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
@@ -38,7 +39,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Writing</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -51,11 +52,9 @@
 
 			<div id="writings-holder" class="grid">
 
-			<div class="width-12-12-m width-12-12 work-item">
+			<div class="box">
 			<h2><a href="Contact"></a></h2>
-				<p>An ever green perennial, it originates from the Arabian Peninsula.</p>
-
-			<p>Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
+				<li><a href="ltang22@binghamton.edu"> Email </a></li>
 			
           </div>
 
