--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
@@ -53,25 +54,28 @@
 
 			<div id="portfolio-holder" class="grid">
 
-			<div class="width-12-12-m width-12-12 work-item">
-              <a class="inner" href="portfolio-single.html" title="Aloe vera">
-					 <div class="work-inside">
-					  <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
+			<!-- <div class="width-12-12-m width-12-12 work-item">
+              <a class="inner" href="portfolio-single.html" title="Aloe vera"> 
+					 <div class="work-inside"> -->
+					  <!-- <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
+					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p> -->
 					</div>
-				<img title="Aloe vera" src="images/aloe-vera.jpg" />
+				<img title="COVID Fundraiser" src="images/finaldumplingboard.jpg" />
 			  </a>
 			</div>
 
 			<div class="width-12-12-m width-9-12">
-				<h4>A Sub Header</h4>
-				<p>Praesent posuere non dui ac interdum. Maecenas ac vulputate massa. Etiam a esta ligula. Nam congue posuere enim et convallis. In lacinia dui urna, at posuere quam sollicitudin vel.</p>
-				<p>Quisque eu justo in mauris rutrum mollis. Maecenas sit amet scelerisque est, nec eleifend nisl. Vivamus pulvinar egestas elit vel bibendum. Donec iaculis purus est, quis efficitur arcu facilisis quis.</p>
-				<p>Duis malesuada libero nec nisi pharetra, vel iaculis neque elementum. Donec porttitor sem quis eros ornare, vel sodales mauris consequat.</p>
-				<p><a title="View Project" target="_blank" href="">View Project</a></p>
+				<h4>Instagram Story "Game Board"</h4>
+				<p>Purpose: To raise money for Asian Americans for Equality's Small Business Emergency Relief Fund</p>
+				<!-- <p><a title="View Project" target="_blank" href="">View Project</a></p> -->
 			</div>
 
-    </div>
+			<!-- <div class="width-12-12-m width-12-12 work-item">
+              <a class="inner" href="portfolio-single.html" title="Aloe vera"> 
+					 <div class="work-inside"> -->
+					  <!-- <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
+					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p> -->
+					</div>
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
