--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
@@ -38,7 +39,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Writing</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -53,23 +54,24 @@
 
 		<div id="portfolio-holder" class="grid">
 
-          <div class="width-12-12-m width-12-12 work-item">
+          <div class="box">
             <a class="inner" href="portfolio-single.html" title="Portfolio">
               <div class="work-inside">
-                <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-                <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
+                <h2>Kappa Phi Lambda</h2>
+                <p>Publicity Chair April 2020 – present</p>
               </div>
-              <img title="Aloe vera" src="images/aloe-vera.jpg" />
+            <!--  <img title="Aloe vera" src="images/aloe-vera.jpg" /> -->
             </a>
           </div>
 
-          <div class="width-12-12-m width-12-12 work-item">
+          <!-- <div class="width-12-12-m width-12-12 work-item">
+          	<div class ="box">
             <a class="inner" href="portfolio-single.html" title="Portfolio">
               <div class="work-inside">
-                <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-                <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
+                <h2>Chinese American Student Union</h2>
+                <p>Publicity Intern (November 2018 - May 2019), Publicity Chair (August 2019 - April 2020) </p>
               </div>
-              <img title="Aloe vera" src="images/aloe-vera.jpg" />
+              <img title="Aloe vera" src="images/aloe-vera.jpg" /> -->
             </a>
           </div>
 
