--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
@@ -38,7 +39,7 @@
         <ul>
           <li><a class="active" href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Writing</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -47,21 +48,19 @@
 
 		<div id="main" class="grid">
 
-		<div id="writings" class="width-12-12-m width-12-12">
+			<div id="writings" class="width-12-12-m width-12-12">
 
 			<div id="writings-holder" class="grid">
 
-			<div class="width-12-12-m width-12-12 work-item">
+			<!-- <div class="width-12-12-m width-12-12 work-item"> -->
+			<div class="box">
+
 			<h2><a href="About Me"></a></h2>
-				<p>An ever green perennial, it originates from the Arabian Peninsula.</p>
 
-			<p>Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
+			<p>Born & raised in Chinatown, Manhattan</p>
 
-			<p><a href="files/resume.pdf" title="resume">My Resume (.pdf)</a></p>
+			<p><a href="images/resume.pdf" title="resume">My Resume(.pdf)</a></p>
 
-           	<p>In rutrum, nisi sed eleifend venenatis, tellus est volutpat nulla, sed posuere quam velit non odio. Proin vel quam pulvinar nunc faucibus pulvinar sit amet sed lorem. Nullam maximus, ante non euismod iaculis, leo neque ultricies ligula, tristique sodales purus libero nec dolor. Donec volutpat metus vitae finibus laoreet. Donec ut eros non nisi efficitur gravida non at eros. Aliquam in neque aliquam, consequat sapien ac, luctus nisl. Curabitur lacinia ligula id aliquet ullamcorper. Aenean mattis ut massa sed auctor. Phasellus sit amet lectus maximus, malesuada est a, vestibulum libero. Proin dui sapien, congue vel varius eu, rhoncus in ligula.</p>
-
-           	<p>Sed eleifend quam non nisi elementum varius. Curabitur posuere sit amet ex vitae vehicula. Cras eleifend quam tempus fringilla finibus. Duis suscipit semper justo, quis scelerisque massa vestibulum quis. In imperdiet ornare nunc. Vestibulum at ligula eu sapien laoreet varius. Sed dapibus, purus maximus congue porttitor, arcu dolor tincidunt purus, eu vulputate leo lorem quis libero. Nunc tempor pellentesque auctor. Praesent pretium lorem ac ipsum elementum venenatis. Fusce vitae arcu pharetra, dignissim tortor quis, ornare lectus. Phasellus sed condimentum nunc. Suspendisse dapibus, orci vel sagittis ornare, risus elit gravida nunc, nec posuere dolor nulla accumsan est. </p>
           </div>
 
     	</div>
