--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="design, writer, designer, journalist">
 	<meta name="description" content="Personal Website of Lily Tang">
 	<title>Lily Tang</title>
@@ -38,7 +39,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a class="active" href="blog.html">Blog</a></li>
+          <li><a class="active" href="blog.html">Writing</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
