--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -39,7 +39,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Writing</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
