--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
 
 			<div class="box">
 			<h2><a href="Contact"></a></h2>
-				<li><a href="ltang22@binghamton.edu"> Email </a></li>
+				<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+				<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="lilytang00"><a class="LI-simple-link" href='https://www.linkedin.com/in/lilytang00?trk=profile-badge'>Lily Tang</a></div>
 			
           </div>
 
