--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -60,7 +60,7 @@
 					  <!-- <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
 					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p> -->
 					</div>
-				<img title="COVID Fundraiser" src="images/finaldumplingboard.jpg" />
+				<img title="COVID Fundraiser" src="images/finaldumplingboard.jpg" class=".img" />
 			  </a>
 			</div>
 
