--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
 			<p>Born & raised in Chinatown, Manhattan</p>
 
-			<p><a href="images/resume.pdf" title="resume">My Resume(.pdf)</a></p>
+			<p><a href="images/resume.pdf" style="text-decoration: none" style="color:#000000;" title="resume">My Resume(.pdf)</a></p>
 
           </div>
 
@@ -71,7 +71,7 @@
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
-			<p>Copyright ©2020 · Lily Tang</p>
+			<!-- <p>Copyright ©2020 · Lily Tang</p> -->
 		</div>
 	</div>
 
