--- a/blog.html
+++ b/blog.html
@@ -48,35 +48,23 @@
 
 		<div id="main" class="grid">
 
-			<div id="writings" class="width-12-12m width-12-12">
+			<div id="portfolio" class="width-12-12m width-12-12">
 
-			<h3><a title="Blog" href="blog.html">Writing</a></h3>
+			<h3><a href="blog.html">Writing</a></h3>
 
 		<div id="writings-holder" class="grid">
 
-          <div class="width-12-12-m width-6-12 work-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-              <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-                <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-                <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
+          <div class="box">
+            <a class ="inner" a target="_blank" href="https://www.bupipedream.com/author/ltang/" style="text-decoration: none" style="color:#000000;">Pipe Dream</a>
+              <div class="work-inside">
               </div>
 
-          <div class="width-12-12-m width-6-12 work-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-              <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-                <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
-                <p>An ever green perennial, it originates from the Arabian Peninsula.</p>
-              </div>
 
-          </div>
-
-    	</div>
-
-	</div>
+        </div>
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
-			<p>Copyright ©2020 · Lily Tang</p>
+			<!-- <p>Copyright ©2020 · Lily Tang</p> -->
 		</div>
 
 	</div>
