--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
-			<p>Copyright ©2020 · Lily Tang</p>
+			<!-- <p>Copyright ©2020 · Lily Tang</p> -->
 		</div>
 	</div>
 
