--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -60,7 +60,7 @@
 					  <!-- <h2>Aloe vera is a succulent plant species of the genus Aloe.</h2>
 					  <p>An ever green perennial, it originates from the Arabian Peninsula.</p> -->
 					</div>
-				<img title="COVID Fundraiser" src="images/finaldumplingboard.jpg" class=".img" />
+				<img title="COVID Fundraiser" src="images/finaldumplingboard.jpg" width="300px" height="auto"/>
 			  </a>
 			</div>
 
@@ -79,7 +79,7 @@
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
-			<p>Copyright ©2020 · Lily Tang</p>
+			<!-- <p>Copyright ©2020 · Lily Tang</p> --> 
 		</div>
 	</div>
 
