--- a/portfolio.html
+++ b/portfolio.html
@@ -55,10 +55,10 @@
 		<div id="portfolio-holder" class="grid">
 
           <div class="box">
-            <a class="inner" href="portfolio-single.html" title="Portfolio">
+            <a class="inner" href="portfolio-single.html" style="text-decoration: none" style="color:#000000;" title="Portfolio">
               <div class="work-inside">
                 <h2>Kappa Phi Lambda</h2>
-                <p>Publicity Chair April 2020 – present</p>
+                <!-- <p>Publicity Chair April 2020 – present</p>-->
               </div>
             <!--  <img title="Aloe vera" src="images/aloe-vera.jpg" /> -->
             </a>
@@ -83,7 +83,7 @@
 
 		<div id="footer" class="grid">
 		<div class="width-12-12-m width-12-12">
-			<p>Copyright ©2020 · Lily Tang</p>
+			<!-- <p>Copyright ©2020 · Lily Tang</p> -->
 		</div>
 
 	</div>
